# htmx-flask

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
src/flask_htmx/: __init__.py  constants.py  extension.py  requests.py  response.py
src/htmx_flask/: __init__.py  extension.py  requests.py  response.py
tests/: conftest.py  test_request.py  test_response.py
