# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask-htmx"
version = "0.1.0"
description = "htmx support for Flask"
authors = [{ name = "Sergi Pons Freixes", email = "sergi@cub3.net" }]
requires-python = ">=3.7"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["htmx", "flask", "html"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "flask>=2.0.0"
]

[project.urls]
"Source Code" = "https://github.com/sponsfreixes/flask-htmx"
"Issue Tracker" = "https://github.com/sponsfreixes/flask-htmx/issues"
"Changes" = "https://github.com/sponsfreixes/flask-htmx/blob/main/CHANGELOG.md"

dependencies = [
  'flask>=2.0.0',
]

[project.optional-dev]
tests = [
    'pre-commit',
]

[project.optional-dependencies]
tests = [
  'pytest',
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line_length = 88

